modification html et ajout photo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,96 @@
     <title> Naïm EBRAHIM CV Expérience formation</title>
     <meta name="keyword" CV Expérience formation>
     <meta name="description" Mon CV avec expérience et formations>
+    <link rel="stylesheet" href="style.css">
 </head>
-<header></header>
-<Title>Technicien Développeur</Title>
+<body>
+    <section id="info">
+        <div>
+            <h1>
+                Naïm EBRAHIM
+            </h1>
+               <strong>Technicien Développeur</strong> 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo inventore delectus architecto in, magni non ullam incidunt id repellendus, totam animi iure quos odio. Sit dolore assumenda excepturi aperiam harum.</p>
+        </div>
+        <div class="info-image">
+            <img src="cv.jpg" alt="cv">
+        </div>
+    </section>
+    <section id="exp">
+        <h2>Expériences professionnelles</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, magnam laborum. Provident laboriosam laudantium ratione porro ea qui nostrum voluptatibus neque, ut nesciunt consectetur quis laborum explicabo eligendi, quidem itaque!</p>
+        <table>
+            <tr>
+                <td class="date">2016</td>
+                <td class="entreprise">ILL</td>
+                <td class="description">
+                    <h3>BTS Assistant de manager</h3>
+                    <p>Aide au recrutement</p>
+                </td>
+            </tr>
+            <tr>
+                <td class="date">2016</td>
+                <td class="entreprise">ILL</td>
+                <td class="description">
+                    <h3>BTS Assistant de manager</h3>
+                    <p>Aide au recrutement</p>
+                </td>
+            </tr>
+            <tr>
+                <td class="date">2016</td>
+                <td class="entreprise">ILL</td>
+                <td class="description">
+                    <h3>BTS Assistant de manager</h3>
+                    <p>Aide au recrutement</p>
+                </td>
+            </tr>
+            <tr>
+                <td class="date">2016</td>
+                <td class="entreprise">ILL</td>
+                <td class="description">
+                    <h3>BTS Assistant de manager</h3>
+                    <p>Aide au recrutement</p>
+                </td>
+            </tr>
+        </table>
+    </section>
+    <section id="competence">
+        <h4>Compétences professionnelles</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, magnam laborum. Provident laboriosam laudantium ratione porro ea qui nostrum voluptatibus neque, ut nesciunt consectetur quis laborum explicabo eligendi, quidem itaque!</p>
+        <div>
+            <li>contrat</li>
+            <li>contrat</li>
+            <li>contrat</li>
+            <li>contrat</li>
+            <li>contrat</li>
+            <li>contrat</li>
+            <li>contrat</li>
+            <li>contrat</li>       
+         </div>
+    </section> 
+    <section id="hobbies">
+        <h5>Hobbies</h5>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, nihil soluta exercitationem, consectetur voluptatem modi eius tempore beatae reiciendis, cum quidem sunt quasi possimus sequi adipisci dolore iusto libero fuga.</p>
+    <div>
+        <ol>
+            <li>games</li>
+            <li>games</li>
+            <li>games</li>
+            <li>games</li>
+            <li>games</li>
+            <li>games</li>
+            <li>games</li>
+            <li>games</li>
+        </ol>   
+    </div>
+    </section>
+    <section id="fin">
+        <h6>Conctact</h6>
+        <footer>
+            Naïm EBRAHIM
+            28 bis rue de la résistance
+            naimebrahim38@gmail.com
+        </footer>
+    </section>
 </body>
 </html>
